@startuml
package util {
    class Regiao {
        CharField nome
        Charfield sigla
    }

    class Estado {
        CharField nome
        Charfield sigla
        Regiao regiao
    }



    class Cidade {
        CharField nome
        Charfield ddd
        Estado regiao
    }

    Estado  *-- Regiao
    Cidade  *- Estado 
}

package estoque {
    class Estoque {
        Lote lote
        DecimalFIeld quantidade
        Prateleira prateleira
        def acionar(quant)
        def subtrair(quant)
    }

    class Lote {
        CharField codigo
        DataField data_validade
        Produto produto
    }

    class Prateleira {
        CharField codigo
        Categoria categoria
    }

    class Categoria {
        CharField nome
    }

    class Produto{
        CharField codigo
        CharField nome
        Marca marca
        Categoria categoria
    }

    class Marca{
        CharField nome
        Fabricante fabricante
    }

    class Fabricante{
        Charfield nome
        Charfield endereco
        Cidade cidade
    }

    Estoque *- Lote
    Estoque *-- Prateleira
    Lote *- Produto
    Prateleira *-- Categoria
    Produto *-- Marca  
    Produto *-- Categoria  
    Marca *-- Fabricante
    Fabricante *- Cidade
}
/'
package compra {
    class PedidoCompra{
        CharField numero
        DataField data_pedido
        FloatField frete
        IntFielde prazo
        Fornecedor fornecedor
        Comprador comprador 
    }

    class ItemCompra{
        Produto produto
        FloatField quantidade
        FloatField preco_unitario
        FloatField desconto
        FloatField acrescimo
    }

    class Fornecedor{
        Charfield nome
        Charfield endereco
        Cidade cidade        
    }

    class Comprador{
        CharField nome
    }

    ItemCompra *- PedidoCompra
    ItemCompra *- Produto
    PedidoCompra *-- Fornecedor
    Fornecedor *-- Cidade
    Comprador *- PedidoCompra
}

package venda {
    class PedidoVenda{
        CharField numero
        DataField data_pedido
        Vendedor vendedor
        Cliente cliente
    }

    class ItemVenda{
        Produto produto
        FloatField quantidade
        FloatField preco_unitario
    }

    class Cliente{
        CharField nome
    }

    class Vendedor{
        CharField nome
    }

    ItemVenda *- PedidoVenda
    ItemVenda *- Produto
    PedidoVenda *-- Cliente
    PedidoVenda *-- Vendedor
    Cliente *- Cidade
}'/
@enduml